--- a/app/views/elements/_navbar.html.erb
+++ b/app/views/elements/_navbar.html.erb
@@ -7,12 +7,22 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <%= link_to "My Application", defined?(root_path) ? root_path : "#", class: "navbar-brand" %>
+    <%= link_to "Property Risk Assessment", defined?(root_path) ? root_path : "#", class: "navbar-brand" %>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="navbar-collapse-1">
     <ul class="nav navbar-nav">
+      <li> <%= link_to 'Mieter', tanants_path %></li>
+      <li> <%= link_to 'Gebäude', properties_path %></li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Einstellungen <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li> <%= link_to 'Bundesländer', locations_path %> </li>
+              <li> <%= link_to 'Prüfungsspezifikationen', inspection_specifications_path %> </li>
+              <li> <%= link_to 'Gewerke', facility_categories_path %></li>
+            </ul>
+      </li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <% if defined?(Devise) %>
