--- a/app/views/facilities/index.html.erb
+++ b/app/views/facilities/index.html.erb
@@ -1,38 +1,25 @@
 <%- model_class = Facility -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => Facility %></h1>
-</div>
 <table class="table table-striped">
   <thead>
     <tr>
       <th>ID</th>
       <th><%= model_class.human_attribute_name(:name) %></th>
-      <th><%= model_class.human_attribute_name(:specification) %></th>
-      <th><%= model_class.human_attribute_name(:notes) %></th>
-      <th><%= model_class.human_attribute_name(:base_of_check) %></th>
       <th><%= model_class.human_attribute_name(:amount) %></th>
-      <th><%= model_class.human_attribute_name(:number) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
     <% @facilities.each do |facility| %>
       <tr>
-        <td><%= facility.id %></td>
         <td><%= facility.name %></td>
-        <td><%= facility.specification %></td>
-        <td><%= facility.notes %></td>
-        <td><%= facility.base_of_check %></td>
         <td><%= facility.amount %></td>
-        <td><%= facility.number %></td>
         <td><%=l facility.created_at, format: :long %></td>
         <td>
-          <%= link_to facility_path(facility), :class => 'btn btn-xs', :title => "#{ t('.show', :default => t('helpers.links.show')) }" do %>
+          <%= link_to property_facilities_path(facility), :class => 'btn btn-xs', :title => "#{ t('.show', :default => t('helpers.links.show')) }" do %>
             <%= glyph 'info-sign' %>
             <%= glyph 'pencil' %>
           <%- end -%>
-          <%= link_to facility_path(facility), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-xs', :title => "#{ t('.destroy', :default => t('helpers.links.destroy')) }" do %>
+          <%= link_to property_facilities_path(facility), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-xs', :title => "#{ t('.destroy', :default => t('helpers.links.destroy')) }" do %>
             <%= glyph 'remove' %>
           <%- end -%>
         </td>
@@ -42,5 +29,5 @@
 </table>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
-            new_facility_path,
+            new_property_facility_path(@property),
             :class => 'btn btn-primary' %>
