--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -62,3 +62,21 @@
   <h3> Anlagen</h3>
    <%= render template: 'facilities/index' %>
 </div>
+    
+<div class="col-md-4">
+  <h3> Versicherung</h3>
+   <% if @insurance %>
+    <%= render template: 'insurances/show' %>
+   <% end %>       
+</div>
+    
+<div class="col-md-4">
+  <h3> Begehungen</h3>
+  <% if @survey %>
+   <%= render template: 'surveys/show' %>
+  <% end %>
+</div>
+    
+    
+    
+    
