refactor checks and facilities

--- a/app/views/facilities/index.html.erb
+++ b/app/views/facilities/index.html.erb
@@ -2,9 +2,9 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th>ID</th>
       <th><%= model_class.human_attribute_name(:name) %></th>
-      <th><%= model_class.human_attribute_name(:amount) %></th>
+      <th><%= model_class.human_attribute_name(:specification) %></th>
+      <th><%= model_class.human_attribute_name(:description) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
@@ -12,13 +12,14 @@
     <% @facilities.each do |facility| %>
       <tr>
         <td><%= facility.name %></td>
-        <td><%= facility.amount %></td>
-        <td><%=l facility.created_at, format: :long %></td>
+        <td><%= facility.specification %></td>
+        <td><%= facility.description %></td>
+
         <td>
-          <%= link_to property_facility_path(facility,@property), :class => 'btn btn-xs', :title => "#{ t('.show', :default => t('helpers.links.show')) }" do %>
+          <%= link_to facility_path(facility), :class => 'btn btn-xs', :title => "#{ t('.show', :default => t('helpers.links.show')) }" do %>
             <%= glyph 'pencil' %>
           <%- end -%>
-          <%= link_to property_facility_path(facility,@property), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-xs', :title => "#{ t('.destroy', :default => t('helpers.links.destroy')) }" do %>
+          <%= link_to facility_path(facility), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-xs', :title => "#{ t('.destroy', :default => t('helpers.links.destroy')) }" do %>
             <%= glyph 'remove' %>
           <%- end -%>
         </td>
@@ -28,5 +29,4 @@
 </table>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
-            new_property_facility_path(@property),
-            :class => 'btn btn-primary' %>
+            new_facility_path,:class => 'btn btn-primary' %>
