--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = Property -%>
 <div class="page-header">
-  <h1>Objekte1</h1>
+  <h1>Objekte</h1>
 </div>
 <table class="table table-striped">
   <thead>
