--- a/app/views/tanants/index.html.erb
+++ b/app/views/tanants/index.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = Tanant -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => Tanant %></h1>
+  <h1>Mieterliste</h1>
 </div>
 <table class="table table-striped">
   <thead>
