--- a/app/views/elements/_navbar.html.erb
+++ b/app/views/elements/_navbar.html.erb
@@ -15,12 +15,16 @@
     <ul class="nav navbar-nav">
       <li> <%= link_to 'Mieter', tanants_path %></li>
       <li> <%= link_to 'Gebäude', properties_path %></li>
+      <li> <%= link_to 'Versicherungen', insurances_path %></li>
+
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Einstellungen <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li> <%= link_to 'Bundesländer', locations_path %> </li>
-              <li> <%= link_to 'Prüfungsspezifikationen', inspection_specifications_path %> </li>
+              <li> <%= link_to 'Prüfungsverordnungen', inspection_specifications_path %> </li>
               <li> <%= link_to 'Gewerke', facility_categories_path %></li>
+              <li> <%= link_to 'Anlagen Katalog', facilities_path %></li>
+              <li> <%= link_to 'Baugenehmigungen', planning_permissions_path %></li>
             </ul>
       </li>
     </ul>
