--- a/app/views/facilities/_form.html.erb
+++ b/app/views/facilities/_form.html.erb
@@ -1,19 +1,14 @@
 <%= simple_form_for [@property,@facility], :html => { :class => 'form-horizontal form-model' } do |f| %>
 
-      <%= f.association :facility_category %>
       <%= f.input :name %>
       <%= f.input :specification %>
-      <%= f.input :notes %>
-      <%= f.input :base_of_check %>
-      <%= f.input :amount %>
-      <%= f.input :number %>
-      <%= f.input :has_revision_documents %>
-      <%= f.input :has_service_contract %>
-
+      <%= f.input :description %>
+      <%= f.input :comment %>
+      <%= f.association :facility_category %>
 
     <div class='col-md-offset-2 col-md-10'>
       <%= f.submit nil, :class => 'btn btn-primary' %>
       <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                  property_facilities_path(@property), :class => 'btn btn-default' %>
+                  facilities_path, :class => 'btn btn-default' %>
     </div>
 <% end %>
