--- a/app/views/facilities/new.html.erb
+++ b/app/views/facilities/new.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = Facility -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => Facility %></h1>
+  <h1>Neue Anlage</h1>
 </div>
 <%= render :partial => 'form' %>
 
