--- a/app/views/facilities/show.html.erb
+++ b/app/views/facilities/show.html.erb
@@ -9,14 +9,13 @@
       <dd><pre class="prettyprint"><%= @facility.name %></pre></dd>
       <dt class="label label-default"><%= model_class.human_attribute_name(:specification) %></dt>
       <dd><pre class="prettyprint"><%= @facility.specification %></pre></dd>
-      <dt class="label label-default"><%= model_class.human_attribute_name(:notes) %></dt>
-      <dd><pre class="prettyprint"><%= @facility.notes %></pre></dd>
-      <dt class="label label-default"><%= model_class.human_attribute_name(:base_of_check) %></dt>
-      <dd><pre class="prettyprint"><%= @facility.base_of_check %></pre></dd>
-      <dt class="label label-default"><%= model_class.human_attribute_name(:amount) %></dt>
-      <dd><pre class="prettyprint"><%= @facility.amount %></pre></dd>
-      <dt class="label label-default"><%= model_class.human_attribute_name(:number) %></dt>
-      <dd><pre class="prettyprint"><%= @facility.number %></pre></dd>
+      <dt class="label label-default"><%= model_class.human_attribute_name(:description) %></dt>
+      <dd><pre class="prettyprint"><%= @facility.description %></pre></dd>
+      <dt class="label label-default"><%= model_class.human_attribute_name(:comment) %></dt>
+      <dd><pre class="prettyprint"><%= @facility.comment %></pre></dd>
+      <dt class="label label-default"><%= model_class.human_attribute_name(:facility_category) %></dt>
+      <dd><pre class="prettyprint"><%= @facility.facility_category.name %></pre></dd>
+
   </dl>
 </div>
 
@@ -24,9 +23,9 @@
   <%= link_to t('.back', :default => t("helpers.links.back")),
               @property, :class => 'btn btn-default'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                edit_property_facility_path(@facility,@property), :class => 'btn btn-default' %>
+                edit_facility_path(@facility), :class => 'btn btn-default' %>
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              property_facility_path(@facility,@property),
+              facility_path(@facility),
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
