--- a/app/views/inspection_specifications/index.html.erb
+++ b/app/views/inspection_specifications/index.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = InspectionSpecification -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => InspectionSpecification %></h1>
+  <h1>Prüfungsverordnungen Liste</h1>
 </div>
 <table class="table table-striped">
   <thead>
