--- a/app/views/inspection_specifications/new.html.erb
+++ b/app/views/inspection_specifications/new.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = InspectionSpecification -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => InspectionSpecification %></h1>
+  <h1>Neue Prüfungsverordung </h1>
 </div>
 <%= render :partial => 'form' %>
 
