--- a/app/views/insurances/_form.html.erb
+++ b/app/views/insurances/_form.html.erb
@@ -1,22 +1,14 @@
-<%= form_for @insurance, :html => { :class => 'form-horizontal form-model' } do |f| %>
-  <div class="form-group">
-    <%= f.label :name, :class => 'control-label col-md-2' %>
-    <div class="col-md-10">
-      <%= f.text_field :name, :class => 'text-field form-control' %>
-    </div>
-  </div>
-  <div class="form-group">
-    <%= f.label :notes, :class => 'control-label col-md-2' %>
-    <div class="col-md-10">
-      <%= f.text_area :notes, :class => 'text-field form-control' %>
-    </div>
-  </div>
+<%= simple_form_for [@property,@insurance], :html => { :class => 'form-horizontal form-model' } do |f| %>
 
-  <div class="form-group">
+
+    <%= f.input :name %>
+    <%= f.input :notes %>
+
+
+
     <div class='col-md-offset-2 col-md-10'>
       <%= f.submit nil, :class => 'btn btn-primary' %>
       <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                  insurances_path, :class => 'btn btn-default' %>
+                  @property, :class => 'btn btn-default' %>
     </div>
-  </div>
 <% end %>
