--- a/app/views/insurances/index.html.erb
+++ b/app/views/insurances/index.html.erb
@@ -1,24 +1,20 @@
 <%- model_class = Insurance -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => Insurance %></h1>
+  <h1>Versicherungen</h1>
 </div>
 <table class="table table-striped">
   <thead>
     <tr>
-      <th>ID</th>
       <th><%= model_class.human_attribute_name(:name) %></th>
       <th><%= model_class.human_attribute_name(:notes) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
     <% @insurances.each do |insurance| %>
       <tr>
-        <td><%= insurance.id %></td>
         <td><%= insurance.name %></td>
         <td><%= insurance.notes %></td>
-        <td><%=l insurance.created_at, format: :long %></td>
         <td>
           <%= link_to insurance_path(insurance), :class => 'btn btn-xs', :title => "#{ t('.show', :default => t('helpers.links.show')) }" do %>
             <%= glyph 'info-sign' %>
