--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,22 +1,18 @@
 <%- model_class = Location -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => Location %></h1>
+  <h1>Bundesländer</h1>
 </div>
 <table class="table table-striped">
   <thead>
     <tr>
-      <th>ID</th>
       <th><%= model_class.human_attribute_name(:name) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
     <% @locations.each do |location| %>
       <tr>
-        <td><%= location.id %></td>
         <td><%= location.name %></td>
-        <td><%=l location.created_at, format: :long %></td>
         <td>
           <%= link_to location_path(location), :class => 'btn btn-xs', :title => "#{ t('.show', :default => t('helpers.links.show')) }" do %>
             <%= glyph 'info-sign' %>
